# candelasoft

./: .dockerignore  .env  .gitignore  Dockerfile  Dockerfile-nginx  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
apps/common/: exceptions.py
apps/common/external_services/: jsonplaceholder.py
apps/common/models/: base_model.py
apps/common/utils/: email_utils.py
apps/core/: admin.py  urls.py
apps/core/models/: suscription.py
apps/core/serializers/: subscription_serializer.py  user_serializer.py
apps/core/tests/: test_subscription_api.py
apps/core/views/: subscription_view.py  user_register_view.py
candelasoft/: asgi.py  celery.py  nginx.conf  settings.py  swagger.py  urls.py  wsgi.py
